Manga Reader Double Layout bugfixes (#1341)
* Enforce some max heights on series detail page

* Added some icon to layout mode to help the user understand how they work (Robbie needs to css it)

* Adding split-double icon

* Fixing reverse

* Added lots of debug code, refactored documentation, and added some history for wide images

* More prefetching code for wide images

* Fixed the issue where sometimes paging backwards would skip an image

* Fixed up a bug where occasionally on double (manga) paging backwards could skip a page.

Fixed a bug on double where last page could get duplicated.

* Don't update pageDimensionHistory since we don't need it

* Forgot some changes

--- a/UI/Web/src/app/manga-reader/manga-reader.component.scss
+++ b/UI/Web/src/app/manga-reader/manga-reader.component.scss
@@ -57,9 +57,14 @@ img {
   }
 
   &.reverse {
-    flex-direction: row-reverse;
     overflow: unset;
-    justify-content: flex-end;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+
+    img {
+      margin: unset;
+    }
   }
   
   #image-2 {
@@ -172,6 +177,7 @@ img {
     overflow: hidden;
     border: 2px solid #ccc;
     vertical-align: sub;
+    display: inline-block;
 
     &::before {
         margin-left: 30%;
@@ -197,8 +203,21 @@ img {
     .none {
         background-color: rgba(255, 255, 255, 0.5);
     }
+
+    // For layout only
+
   }
-  
+
+  .split-double {
+    height: 20px;
+    display: inline-block;
+    font-size: .7em;
+
+    .right {
+      left: -7px;
+    }
+  }
+
   ::ng-deep {
     .custom-slider .ngx-slider .ngx-slider-bar {
       background: #e9ffe2;
